--- a/Bayesian_smoothing_JSS.Rmd
+++ b/Bayesian_smoothing_JSS.Rmd
@@ -12,17 +12,17 @@ author:
       | Avenida dos Astronautas, 1758
       | 12227-001 Sao Jose dos Campos, Brazil
     email: \email{gilberto.camara```inpe.br}
-  - name: Rolf Simoes
-    orcid: 0000-0003-0953-4132
-    affiliation: |
-        | Nat Inst for Space Research
-        | Brazil
-    # To add another line, use \AND at the end of the previous one as above
   - name: Renato Assunção
     orcid: 0000-0001-7442-9166
     affiliation: | 
         | Federal Univ of Minas Gerais
+        | Brazil 
+  - name: Rolf Simoes
+    orcid: 0000-0003-0953-4132
+    affiliation: |
+        | Nat Inst for Space Research
         | Brazil \AND
+    # To add another line, use \AND at the end of the previous one as above
   - name: Alexandre Carvalho
     orcid: 0000-0001-8762-5465
     affiliation: |
@@ -73,62 +73,31 @@ output:
 
 ```{r, setup, include=FALSE, echo = FALSE}
 options(prompt = 'R> ', continue = '+ ')
-# if sits is not installed, install it
-if (!requireNamespace("sits", quietly = TRUE))
-    install.packages("sits", repos = "https://cloud.r-project.org/")
-library("sits")
+options(warn = -1)
+# if terra is not installed, install it
+if (!requireNamespace("terra", quietly = TRUE))
+    install.packages("terra", repos = "https://cloud.r-project.org/")
+library(terra)
+# if bayesEO is not installed, install it
+if (!requireNamespace("bayesEO", quietly = TRUE))
+    devtools::install_github("e-sensing/bayesEO")
+library(bayesEO)
 # if sitsdata is not installed, get it
 if (!requireNamespace("sitsdata", quietly = TRUE))
     devtools::install_github("e-sensing/sitsdata")
 library(sitsdata)
-sits:::.conf_set_options("tmap_legend_text_size" = 0.7)
-sits:::.conf_set_options("tmap_legend_title_size" = 0.7)
-sits:::.conf_set_options("tmap_max_cells" = 1e+09)
 knitr::opts_chunk$set(echo = TRUE, fig.pos = "h")
+knitr::opts_chunk$set(message = FALSE)
+knitr::opts_chunk$set(warning = FALSE)
 tempdir = "./temp_dir"
-Sys.setenv("SITS_DOCUMENTATION_MODE" = "true")
 ```
 \newpage
 # Introduction
 
-Image classification post-processing has been defined as \textit{"a refinement of the
-labelling in a classified image in order to enhance its classification accuracy"}
-\citep{Huang2014}. In remote sensing image analysis, these procedures
-<!--
-% PEDRO: nao gosto do "these procedures", porque o pos-processamento e' uma etapa, e nao um conjunto de procedimentos
--->
-combine pixel-based classification methods with a spatial post-processing
-<!--
-% PEDRO: aqui aparece post-processing novamente como sendo parte do pos-processamento
--->
-method to remove outliers and misclassified pixels. For pixel-based classifiers,
-post-processing methods enable including spatial information
-in the final results.
+Methods such as support vector machines \citep{Mountrakis2011}, random forests \citep{Belgiu2016}, and deep learning \citep{Ma2019} have become the popular for remote sensing image classification. Images resulting from these classifiers frequently have outliers or misclassified pixels. For this reason, image post-processing techniques are widely used to refine the labelling in a classified image in order to enhance its classification accuracy. 
 
-<!--
-% PEDRO: a primeira frase do paragrafo abaixo me parece desnecessaria, pois repete
-% um pouco o que esta na ultima
--->
-Smoothing methods are an important complement to machine learning algorithms
-for image classification. Methods such as support vector machines
-\citep{Mountrakis2011}, random forests \citep{Belgiu2016}, and
-deep learning \citep{Ma2019} are becoming increasingly popular. Since these methods 
-are mostly pixel-based, it is useful to complement them with post-processing smoothing 
-to include spatial information in the result.
+The `bayesEO` package provides a new method for Bayesian post-processing of images produced by machine learning algorithms. The input to the package is an image containing the probabilities of that pixel belonging to each of the classes. The package provides efficient methods for removing outliers and improving class labelling. 
 
-A traditional choice for smoothing classified images is the majority filter, 
-where the class of the central pixel is replaced by the most frequent class of 
-the neighborhood. This technique is rather simplistic; more sophisticated methods 
-use class probabilities. 
-<!--
-% PEDRO: este paragrafo esta com ordem meio invertida. A frase acima fala das
-% probabilidades, mas elas sao apresentadas apenas na frase abaixo
--->
-For each pixel, machine learning and other statistical 
-algorithms provide the probabilities of that pixel belonging to each of the classes. 
-As a first step in obtaining a result, each pixel is assigned to the class whose 
-probability is higher. After this step, smoothing methods use class probabilities 
-to detect and correct outliers or misclassified pixels.
 
 Probability-based smoothing methods include Gaussian and edge-aware filtering \citep{Schindler2012}, modal filters \citep{Ghimire2010}, and probabilistic relaxation 
 \citep{Gong1989}. \citet{Huang2014} propose a relearning method based on co-occurrence 
@@ -168,80 +137,46 @@ analysis, visualization, and classification of satellite image time series.
 
 ## Conversion from probabilities to logits
 
-The proposed post-classification smoothing model considers the output of a machine 
-learning algorithm that provides the probabilities of each pixel in the image to belong 
-to target classes. More formally, let $p_{i,k}$ be the probability of pixel 
-$i$ belonging to class $k$, $k=1,\dots{},K$, then
-<!--
-% PEDRO: faltou dizer quem e' K
--->
+The proposed post-classification smoothing model considers the output of a machine learning algorithm that provides the probabilities of each pixel in the image to belong to target classes. More formally, let $p_{i,k}$ >= 0 be the probability of pixel $i$ belonging to class $k$, $k=1,\dots{},K$, where K is the number of classes, then
 
 \begin{equation}
-\sum_{k=1}^K p_{i,k} = 1, p_{i,k} > 0.
+\sum_{k=1}^K p_{i,k} = 1.
 \end{equation}
-<!--
-% PEDRO: esse p_{i,k} > 0 acho que ficaria melhor na frase acima: "let p_{i,k} > 0"
-E' p_{i,k} > 0 ou seria p_{i,k} >= 0?
--->
 
-To make the inference tractable, the class probability values $p_{i,k}$ are converted to 
-log-odds values. The logit function converts probability values in the interval $[0,1]$ to logit values in  $[-\infty, \infty]$, expressed by
+To make the inference tractable, the class probability values $p_{i,k}$ are converted to log-odds values. The logit function converts probability values in the interval $[0,1]$ to logit values in  $[-\infty, \infty]$, expressed by
 
 \begin{equation}
 x_{i,k} = \ln \left(\frac{p_{i,k}}{1 - p_{i,k}}\right).
 \end{equation}
 
-Confidence in pixel classification increases with logit. There are situations, such as 
-border pixels or mixed ones, where the logit of different classes are similar in magnitude. 
-These are cases of low confidence in the classification result. To assess and correct these 
-cases, the post-classification smoothing method borrows strength from the neighbors.
+Confidence in pixel classification increases with logit. There are situations, such as border pixels or mixed ones, where the logit of different classes are similar in magnitude. These are cases of low confidence in the classification result. To assess and correct these cases, the post-classification smoothing method borrows strength from the neighbors.
 
 ## Bayesian inference
 
-After transforming probability values into logits, the problem can be expressed 
-in a Bayesian context. Suppose that $x\in{}X$ has a distribution 
-$\pi(x|\theta)$ with an unknown $\theta{}\in{}\Theta{}$ parameter. Consider two random 
-variables for each pixel $i$ and class $k$: (a) $x_{i,k}$, the observed class logits; 
-(b) $\mu_{i,k}$, the inferred logit values based on the observations. From the output of 
-the machine learning classification is $x_{i,k}$,
+After transforming probability values into logits, the problem can be expressed in a Bayesian context. Suppose that $x\in{}X$ has a distribution  $\pi(x|\theta)$ with an unknown $\theta{}\in{}\Theta{}$ parameter. Consider two random variables for each pixel $i$ and class $k$: (a) $x_{i,k}$, the observed class logits; (b) $\mu_{i,k}$, the inferred logit values based on the observations. From the output of the machine learning classification is $x_{i,k}$, the aim is to estimate the actual values $\mu_{i,k} | x_{i,k}$. The Bayesian inference procedure can be expressed as
 <!--
 % PEDRO: nao entendi acima
 -->
- the aim is to estimate the actual 
-values $\mu_{i,k} | x_{i,k}$. The Bayesian inference procedure can be expressed as
 
 \begin{equation}
 \pi(\mu|x) \propto{} \pi(x|\mu)\pi(\mu).
 \end{equation}
 
-To estimate the conditional posterior distribution $\pi(\mu|x)$, we combine two 
-distributions: (a) the distribution $\pi(x|\mu)$, known as the likelihood, 
-which expresses how measured values $x_{i,k}$ depend in the underlying values $\mu_{i,k}$; 
-and (b) $\pi(\mu)$, which is our guess on the actual data distribution, known as the prior. 
-For simplicity, independence between the different classes $k$ is assumed. Therefore, the 
-update will be performed for each class $k$ separately.
+To estimate the conditional posterior distribution $\pi(\mu|x)$, we combine two distributions: (a) the distribution $\pi(x|\mu)$, known as the likelihood, which expresses how measured values $x_{i,k}$ depend in the underlying values $\mu_{i,k}$; and (b) $\pi(\mu)$, which is our guess on the actual data distribution, known as the prior. For simplicity, independence between the different classes $k$ is assumed. Therefore, the update will be performed for each class $k$ separately.
 
-The method assumes that the likelihood $x_{i,k} | \mu_{i,k}$ follows a normal 
-distribution $N(\mu_{i,k}, \sigma^2_{k})$, with parameters $\mu_{i,k}$ and $\sigma^2_{k}$. 
-The variance $\sigma^2_{k}$ will be estimated based on user expertise and taken as 
-a hyperparameter to control the smoothness of the resulting estimate. Therefore
+The method assumes that the likelihood $x_{i,k} | \mu_{i,k}$ follows a normal distribution $N(\mu_{i,k}, \sigma^2_{k})$, with parameters $\mu_{i,k}$ and $\sigma^2_{k}$. The variance $\sigma^2_{k}$ will be estimated based on user expertise and taken as a hyperparameter to control the smoothness of the resulting estimate. Therefore
 
 \begin{equation}
 x_{i,k} | \mu_{i,k} \sim N(\mu_{i,k}, \sigma^2_{k})
 \end{equation}
 
-is the likelihood. We will also assume a normal local prior for the 
-parameter $\mu_{i,k}$ with parameters $m_{i,k}$ and $s^2_{i,k}$:
+is the likelihood. We will also assume a normal local prior for the parameter $\mu_{i,k}$ with parameters $m_{i,k}$ and $s^2_{i,k}$:
 
 \begin{equation}
 	\mu_{i,k} \sim N(m_{i,k}, s^2_{i,k}).
 \end{equation}
 
-To calculate the prior, the method assumes that the class probabilities in the spatial
-neighborhood of the pixel have the same distribution. Estimating the local means and variances 
-for the prior distribution considers a spatial neighborhood $N_{i}$ close to pixel $p_i$. 
-Let $\#(N_{i})$ be the number of elements in the neighborhood $N_{i}$. 
-The mean value is given by
+To calculate the prior, the method assumes that the class probabilities in the spatial neighborhood of the pixel have the same distribution. Estimating the local means and variances for the prior distribution considers a spatial neighborhood $N_{i}$ close to pixel $p_i$. Let $\#(N_{i})$ be the number of elements in the neighborhood $N_{i}$. The mean value is given by
 
 \begin{equation}
 m_{i,k} = \frac{\sum_{(j) \in N_{i}} x_{j,k}}{\#(N_{i})}
@@ -282,30 +217,18 @@ in the neighborhood of pixel $i$.
 an user-derived hyperparameter.
 \end{itemize}
 
-The above equation is a weighted average between the value $x_{i,k}$ for the pixel 
-and the mean $m_{i,k}$ for the neighboring pixels. When the variance $s^2_{i,k}$ for the 
-neighbors is too high, the algorithm gives more weight to the pixel value $x_{i,k}$. 
-When the variance of the likelihood $\sigma^2_k$ increases, the method gives more weight to the neighborhood mean $m_{i,k}$.
+The above equation is a weighted average between the value $x_{i,k}$ for the pixel and the mean $m_{i,k}$ for the neighboring pixels. When the variance $s^2_{i,k}$ for the neighbors is too high, the algorithm gives more weight to the pixel value $x_{i,k}$. When the variance of the likelihood $\sigma^2_k$ increases, the method gives more weight to the neighborhood mean $m_{i,k}$.
 
 \newpage
 
 ## Effect of the hyperparameter
 
-The parameter $\sigma^2_k$ controls the level of smoothness. If $\sigma^2_k$ is zero, 
-the estimated value ${E}[\mu_{i,k} | x_{i,k}]$ will be the pixel value $x_{i,k}$. 
-Values of the likelihood variance $\sigma^2_{k}$, which are small relative to the prior variance $s^2_{i,k}$ increase our confidence in the original probabilities. Conversely, likelihood variances $\sigma^2_{k}$, which are large relative to the prior variance $s^2_{i,k}$, increase our confidence in the average probability of the neighborhood.
+The parameter $\sigma^2_k$ controls the level of smoothness. If $\sigma^2_k$ is zero, the estimated value ${E}[\mu_{i,k} | x_{i,k}]$ will be the pixel value $x_{i,k}$. Values of the likelihood variance $\sigma^2_{k}$, which are small relative to the prior variance $s^2_{i,k}$ increase our confidence in the original probabilities. Conversely, likelihood variances $\sigma^2_{k}$, which are large relative to the prior variance $s^2_{i,k}$, increase our confidence in the average probability of the neighborhood.
 
-Thus, the parameter $\sigma^2_{k}$ expresses confidence in the inherent variability 
-of the distribution of values of a class $k$. The smaller the parameter $\sigma^2_{k}$, 
-the more we trust the estimated probability values produced by the classifier for class $k$. 
-Conversely, higher values of $\sigma^2_{k}$ indicate lower confidence in the classifier 
-outputs and improved confidence in the local average values.
+Thus, the parameter $\sigma^2_{k}$ expresses confidence in the inherent variability of the distribution of values of a class $k$. The smaller the parameter $\sigma^2_{k}$, the more we trust the estimated probability values produced by the classifier for class $k$. 
+Conversely, higher values of $\sigma^2_{k}$ indicate lower confidence in the classifier outputs and improved confidence in the local average values.
 
-Consider the following two-class example. Take a pixel with probability $0.4$ 
-(logit $x_{i,1} = -0.4054$) for class A, and probability $0.6$ (logit $x_{i,2} = 0.4054$) 
-for class B. Without post-processing, the pixel will be labelled as class B. Consider a 
-local average of $0.6$ (logit $m_{i,1} = 0.4054$) for class A and $0.4$ 
-(logit $m_{i,2} = -0.4054$) for class B. This is an outlier classified as class B in the midst of a set of pixels of class A. Suppose a local variance of logits to be $s^2_{i,1} = 5$ for class A and $s^2_{i,2} = 10$ and for class B. This difference is to be expected if the local variability of class A is smaller than that of class B. To complete the estimate, we need to set the parameter $\sigma^2_{k}$, representing prior belief in the variability of the probability values for each class. If we take both  $\sigma^2_{A}$ for class A and $\sigma^2_{B}$ for class B to be both 10, the Bayesian  estimated probability for class A is $0.52$  and for class B is $0.48$. In this case, the pixel will be relabeled as being class A. If we set $\sigma^2$ to be 5 for both classes A and B, the Bayesian probability estimate will be $0.48$ for class A and $0.52$ for class B. In this case, the original class will be kept.
+Consider the following two-class example. Take a pixel with probability $0.4$ (logit $x_{i,1} = -0.4054$) for class A, and probability $0.6$ (logit $x_{i,2} = 0.4054$) for class B. Without post-processing, the pixel will be labelled as class B. Consider a local average of $0.6$ (logit $m_{i,1} = 0.4054$) for class A and $0.4$ (logit $m_{i,2} = -0.4054$) for class B. This is an outlier classified as class B in the midst of a set of pixels of class A. Suppose a local variance of logits to be $s^2_{i,1} = 5$ for class A and $s^2_{i,2} = 10$ and for class B. This difference is to be expected if the local variability of class A is smaller than that of class B. To complete the estimate, we need to set the parameter $\sigma^2_{k}$, representing prior belief in the variability of the probability values for each class. If we take both  $\sigma^2_{A}$ for class A and $\sigma^2_{B}$ for class B to be both 10, the Bayesian  estimated probability for class A is $0.52$  and for class B is $0.48$. In this case, the pixel will be relabeled as being class A. If we set $\sigma^2$ to be 5 for both classes A and B, the Bayesian probability estimate will be $0.48$ for class A and $0.52$ for class B. In this case, the original class will be kept.
 
 ## Defining the neighbourhood
 
@@ -321,15 +244,12 @@ To approximate the prior distribution using spatial neighborhoods, the algorithm
 
 ## Reading a probability data cube
  
-The input for post-classification is an image with probabilities produced by a machine learning algorithm. This file should be multi-band, where each band contains the pixel probabilities of a single class; it should be GDAL-readable with INT2S data type with values ranging  from [0..10000].
-<!--
-%PEDRO: como sao numeros inteiros, acho melhor explicar que o 10000 representa 100%, e' isto?
--->
-The file name must have information on reference dates and include a version number. In the examples, we use a file produced by a random forests algorithm applied to a data cube of Sentinel-2 images for tile "20LLQ" in the period 2020-06-04 to 2021-08-26.
+The input for post-classification is an image with probabilities produced by a machine learning algorithm. This file should be multi-band, where each band contains the pixel probabilities of a single class. The file name must have information on reference dates and include a version number. In the examples, we use a file produced by a random forests algorithm applied to a data cube of Sentinel-2 images for tile "20LLQ" in the period 2020-06-04 to 2021-08-26. The image has been stored as INT2S data type with integer values between [0..10000] to represent probabilities ranging from 0 ro 1. 
 
 ```{r, echo = TRUE, eval = TRUE}
 data_dir <- system.file("/extdata/Rondonia-20LLQ/", package = "sitsdata")
-list.files(data_dir)
+probs_file <- list.files(data_dir)
+probs_file
 ```
 
 The training data has six classes: (a) \code{Forest} for natural tropical forest; (b) \code{Water} for lakes and rivers; (c) \code{Wetlands} for areas where water covers the soil in the wet season; (d) \code{ClearCut_Burn} for areas where fires cleared the land after tree removal. (e) \code{ClearCut_Soil} where the forest has been removed; (f) \code{ClearCut_Veg} where some vegetation remains after most trees have been removed. The class labels should also be informed by the user, since they are not stored in image files. 
@@ -339,36 +259,29 @@ labels <- c("Water", "ClearCut_Burn", "ClearCut_Soil",
             "ClearCut_Veg", "Forest", "Wetland")
 ```
 
-The following code creates a data cube object describing the probability file. This is done by \code{sits_cube()} whose main parameters are: (a) \code{source}: data provider, e.g.,  "AWS" or "MPC"; (b) \code{collection}, image collection, e.g., "SENTINEL-2-L2A" (collection from MPC); (c) \code{data_dir}, directory where the image is stored; (d) \code{bands}; band names, in this case \code{probs};  (e) \code{labels}, labels of the training classes; (f) \code{parse_info}, a vector that shows how to extract `tile`, `band`, `date`, and `version` from the file name. It includes designators such as `X1` and `X2`, which are place holders for parts of the file name that are not relevant.
+The following code reads the file using the "terra" package. 
 
 ```{r, echo=TRUE, eval=TRUE}
-probs_cube <- sits_cube( 
-  source = "MPC",
-  collection = "SENTINEL-2-L2A",
-  bands = "probs",
-  labels = labels,
-  parse_info = c(
-    "X1", "X2", "tile", "start_date", "end_date", "band", "version"),
-  data_dir = data_dir)
+probs_image <- terra::rast(paste0(data_dir,"/",probs_file))
+names(probs_image) <- labels
 ```
 
-The output is a tibble with metadata about the probability layers. Figure \@ref(fig:pcube) shows the layers of the data cube. The map for class \code{Forest} shows high probability values associated with compact patches and linear stretches in riparian areas. Class \code{ClearCut_Soil} is mostly composed of dense areas of high probability whose geometrical boundaries result from forest cuts. By contrast, the probability maps for classes \code{Water}, \code{ClearCut_Burn}, and \code{ClearCut_Veg} have mostly low values. 
+The output is a `SpatRaster` object from the `terra` package. Figure \@ref(fig:pcube) shows the plot of all layer of the probability image. The map for class \code{Forest} shows high probability values associated with compact patches and linear stretches in riparian areas. Class \code{ClearCut_Soil} is mostly composed of dense areas of high probability whose geometrical boundaries result from forest cuts. By contrast, the probability maps for classes \code{Water}, \code{ClearCut_Burn}, and \code{ClearCut_Veg} have mostly low values. Note that we need to inform the scaling parameter that converts the image to [0..1] interval.
 
 ```{r pcube, width = 8, tidy="styler", fig.align = 'center', fig.cap = "Class probabilities produced by random forest algorithm."}
-plot(probs_cube)
+bayes_plot(probs_image, scale = 0.0001)
 ```
 
-The non-smoothed labeled map shows the need for post-processing. This map is obtained by taking the class of higher probability to each pixel, without considering the spatial context. This is done by \code{sits_label_classification()} whose main parameters are: (a) \code{cube}, a probability cube; (b) \code{output_dir}, directory for storing results; (c) \code{version}. 
-```{r, echo=TRUE, eval=TRUE}
-label_cube_no_smooth <- sits_label_classification(
-    cube = probs_cube,
-    output_dir = tempdir,
-    version = "no_smooth")
+The non-smoothed labeled map shows the need for post-processing. This map is obtained by taking the class of higher probability to each pixel, without considering the spatial context. This is done by \code{bayes_label()} whose main parameters are: (a) \code{x}, a SpatRaster object containing the probabilities of each class for all pixels; (b) \code{labels}, the labels associated to the classes.
+```{r, tidy = "styler", echo=TRUE, eval=TRUE}
+map_no_smooth <- bayes_label(probs_image)
 ```
 Figure \@ref(fig:map1) shows the resulting map, which contains a significant number of outliers and misclassified pixels.
 
 ```{r map1, fig.width = 6, fig.align = 'center', fig.cap = "Labelled map without smoothing."}
-plot(label_cube_no_smooth)
+bayes_map(map_no_smooth, 
+          tmap_legend_title_size = 0.7,
+          tmap_legend_text_size = 0.7)
 ```
 
 \newpage
@@ -378,12 +291,11 @@ plot(label_cube_no_smooth)
 The local logit variances correspond to the $s^2_{i,k}$ parameter in the Bayesian inference and are estimated by \code{sits_variance()}. Its main parameters are: (a) \code{cube}, a probability cube; (b) \code{window_size}, dimension of the local neighborhood; (c) \code{neigh_fraction}, the percentage of pixels in the neighborhood used to calculate the variance; (d) \code{output_dir}, directory where results will be stored. The example below uses half of the pixels of a $7\times 7$ window to estimate the variance. The chosen pixels will be those with the highest probability pixels to be more representative of the actual class distribution. The output values are the logit variances in the vicinity of each pixel. 
 
 ```{r, echo=TRUE, eval=TRUE}
-var_cube <- sits_variance(
-    cube = probs_cube,
+var_image <- bayes_variance(
+    x = probs_image,
     window_size = 7,
-    neigh_fraction = 0.5,
-    output_dir = tempdir)
-summary(var_cube, only_stats = TRUE)
+    neigh_fraction = 0.5)
+bayes_summary(var_image)
 ```
 
 The choice of the $7 \times 7$ window size is a compromise between having enough values to 
@@ -392,10 +304,10 @@ for class patches of small sizes. Classes such as \code{Water} and \code{ClearCu
 tend to be spatially limited; a bigger window size could result in invalid values for
 their respective normal distributions.
 
-The summary statistics show that most local variance values are low, which is an expected result. Areas of low variance correspond to pixel neighborhoods of high logit values for one of the classes and low logit values for the others. High values of the local variances are relevant in areas of confusion between classes. Figure \@ref(fig:vcube) shows the values of local logit variances for classes \code{ClearCut_Veg} and \code{Forest}, considering only the $4^{th}$ quartile of the distribution. Only the top 25% of the values for each class are shown, emphasizing areas of high local variability. 
+The summary statistics show that most local variance values are low, which is an expected result. Areas of low variance correspond to pixel neighborhoods of high logit values for one of the classes and low logit values for the others. High values of the local variances are relevant in areas of confusion between classes. Figure \@ref(fig:vcube) shows the values of local logit variances for classes \code{ClearCut_Soil} and \code{Forest}, considering only the $4^{th}$ quartile of the distribution. Only the top 25% of the values for each class are shown, emphasizing areas of high local variability. 
 
 ```{r vcube, fig.width = 8, tidy="styler", fig.align = 'center', fig.cap = "Logit variance map showing values above the 3rd quartile."}
-plot(var_cube, percentile = 0.75, labels = c("ClearCut_Veg", "Forest"))
+bayes_plot(var_image, quantile = 0.75, labels = c("ClearCut_Soil", "Forest"))
 ```
 
 Comparing the logit variance maps of Figure \@ref(fig:vcube) with the probability maps of Figure \@ref(fig:pcube) emphasizes the relevance of expert knowledge. The areas of high probability of class \code{Forest} are mostly made of compact patches; areas of high local variance occur near the borders of these patches. By contrast, class \code{ClearCut_Veg} represents a transition between natural forest areas and places where all trees have been cut, which are associated to class \code{ClearCut_Soil}. Class \code{ClearCut_Veg} has a high spectral variability, since the extent of remaining vegetation after most trees have been removed is not uniform. For this reason, the local variance of class \code{ClearCut_Veg} is mostly patch-based, while that of class \code{Forest} is mostly border-based. 
@@ -403,67 +315,63 @@ Comparing the logit variance maps of Figure \@ref(fig:vcube) with the probabilit
 Further insights are provided by Figure \@ref(fig:vhist), which shows the histograms of local variances per class. The values shown correspond to the $4^{th}$ quartile (top 25% of all values). The distribution of logit variances is uneven between the classes. Class \code{ClearCut_Veg} has a more balanced distribution, while most values in the $4^{th}$ quartile of class \code{ClearCut_Soil} have low values. 
 
 ```{r vhist, fig.width = 8, tidy="styler", fig.align = 'center', fig.cap = "Histogram of top quartile of variances of class logits."}
-plot(var_cube, type = "hist")
+bayes_hist(var_image, quantile = 0.75)
 ```
 
 ## Applying Bayesian smoothing to remove outliers
 
-To remove the outliers in the classification map, \pkg{sits} provides \code{sits_smooth()}. Its main parameters are: (a) \code{cube}, a probability cube; (b) \code{window_size},  dimension of the local neighborhood; (c) \code{neigh_fraction}, percentage of pixels in the neighborhood used to calculate the variance; (d) \code{smoothness}, prior logit variances for each class; (e) \code{output_dir}, directory where results will be stored; (f) \code{version}, a string to distinguish different runs.
+To remove the outliers in the classification map, \pkg{bayesEO} provides \code{bayes_smooth()}. Its main parameters are: (a) \code{x}, a probability image; (b) \code{window_size},  dimension of the local neighborhood; (c) \code{neigh_fraction}, percentage of pixels in the neighborhood used to calculate the variance; (d) \code{smoothness}, prior logit variances for each class. 
 
 As discussed above, the effect of the Bayesian estimator depends on the values of the a priori variance $\sigma^2_{k}$ set by the user and the neighborhood definition to compute the local variance $s^2_{i,1}$ for each pixel. To show the effects of different $\sigma^2$ values we consider two cases: (a) setting $\sigma^2$ to a high value close to the maximum value of local logit variance; (b) setting $\sigma^2$ to a lower value close to the minimum value of the $4^{th}$ quartile. 
 
 ```{r, echo=TRUE, eval=TRUE}
-smooth_cube_high <- sits_smooth(
-    cube = probs_cube,
+smooth_high <- bayes_smooth(
+    probs_image,
     window_size = 7,
     neigh_fraction = 0.5,
-    smoothness = c(25, 10, 20, 20, 25, 10),
-    output_dir = tempdir,
-    version = "smooth_high")
+    smoothness = c(25, 10, 20, 20, 25, 10)
+)
 ```
 
-The impact of Bayesian smoothing can be best captured by producing a labeled map using \code{sits_label_classification()}, taking the smoothed image as its input. Figure \@ref(fig:smth1) shows that the outliers and isolated pixels have been removed.
+The impact of Bayesian smoothing can be best captured by producing a labelled map using \code{sits_label_classification()}, taking the smoothed image as its input. Figure \@ref(fig:smth1) shows that the outliers and isolated pixels have been removed.
 
 ```{r smth1, fig.width = 6, fig.align = 'center', fig.cap = "Labeled map with smoothing with high smoothness values."}
-label_cube_smooth_high <- sits_label_classification(
-    cube = smooth_cube_high,
-    output_dir = tempdir,
-    version = "smooth_high")
-plot(label_cube_smooth_high)
+map_smooth_high <- bayes_label(smooth_high)
+bayes_map(map_smooth_high,
+          tmap_legend_title_size = 0.7,
+          tmap_legend_text_size = 0.7)
 ```
 
 In the smoothed map, the outliers have been removed by expanding \code{Forest} areas. Forests have replaced small corridors of water and soil encircled by trees. This effect is due to the high probability of forest detection in the training data. Compare the smoothing with high values with the smoothing with values close to the minimum value of the $4^{th}$ quartile of the local variance for each class, as computed below.
 
 ```{r, echo=TRUE, eval=TRUE}
-smooth_cube_low <- sits_smooth(
-    cube = probs_cube,
+smooth_low <- bayes_smooth(
+    probs_image,
     window_size = 7,
     neigh_fraction = 0.5,
-    smoothness = c(5, 1, 1, 2, 4, 1),
-    output_dir = tempdir,
-    version = "smooth_low")
+    smoothness = c(5, 1, 1, 2, 4, 1)
+)
 ```
 
 To see the impact of small $\sigma^2$, we compute the labeled map.
 
 ```{r smth2, fig.width = 6, fig.align = 'center', fig.cap = "Labeled map with low smoothing parameters."}
-label_cube_smooth_low <- sits_label_classification(
-    cube = smooth_cube_low,
-    output_dir = tempdir,
-    version = "smooth_low")
-plot(label_cube_smooth_low)
+map_smooth_low <- bayes_label(smooth_low)
+bayes_map(map_smooth_low,           
+          tmap_legend_title_size = 0.7,
+          tmap_legend_text_size = 0.7)
 ```
 
 A visual comparison between the two smoothed maps shows that there is an increase in the area of the \code{ClearCut_Veg} class. Such observation is confirmed by comparing the class areas of the non-smoothed map with the two types of smoothed maps, as shown below. 
 
 ```{r, echo=TRUE, eval=TRUE}
-sum1 <- summary(label_cube_no_smooth, only_stats = TRUE)
-names(sum1) <- c("class", "area_k2_no_smooth")
-sum2 <- summary(label_cube_smooth_high, only_stats = TRUE)
-names(sum2) <- c("class", "area_k2_smooth_high")
-sum3 <- summary(label_cube_smooth_low, only_stats = TRUE)
-names(sum3) <- c("class", "area_k2_smooth_low")
-dplyr::inner_join(sum1, sum2, by = "class") %>% 
+sum1 <- bayes_summary(map_no_smooth)
+colnames(sum1) <- c("class", "area_k2_no_smooth")
+sum2 <- bayes_summary(map_smooth_high)
+colnames(sum2) <- c("class", "area_k2_smooth_high")
+sum3 <- bayes_summary(map_smooth_low)
+colnames(sum3) <- c("class", "area_k2_smooth_low")
+dplyr::inner_join(sum1, sum2, by = "class") |>  
   dplyr::inner_join(sum3, by = "class")
 ```
 
